--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# System and software specific files
 .vscode
 DS_Store
+
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
