--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,5 @@
 export DATABASE_HOST=127.0.0.1
+export DATABASE_PORT=5432
+export DATABASE_NAME="todolist"
 export DATABASE_USER="tuter"
 export DATABASE_PASSWORD="Vjsu3j^GPKJcnh&?"
